--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+	<!-- @see https://github.com/STRML/react-grid-layout -->
+	<link rel="stylesheet" type="text/css" href="../node_modules/react-grid-layout/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="..//node_modules/react-resizable/css/styles.css">
+
     <title>React App</title>
   </head>
   <body>
