--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" type="text/css" href="../node_modules/react-grid-layout/css/styles.css">
 	<link rel="stylesheet" type="text/css" href="..//node_modules/react-resizable/css/styles.css">
 
-    <title>React App</title>
+    <title>IDLE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
