--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,6 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 
-		<div id="root" style='height : 100%%, margin : 0, padding : 0'></div>
+		<div id="root" style='height : 100vh; margin : 0; padding : 0;'></div>
 	</body>
 </html>
